--- a/sistema-granjas-Frontend/package.json
+++ b/sistema-granjas-Frontend/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.1.0",
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/react-fontawesome": "^3.1.1",
     "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.14",
     "axios": "^1.13.2",
